@@ -9,14 +9,15 @@ import ru.yandex.practicum.filmorate.storage.repository.RecommendationRepository
 
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
-@Slf4j
 public class RecommendationService {
 
     private final RecommendationRepository recommendationRepository;
@@ -24,51 +25,52 @@ public class RecommendationService {
     private final UserService userService;
 
     /**
-     * Рекомендации по коллаборативной фильтрации:
-     * 1) убеждаемся, что пользователь существует;
-     * 2) забираем его лайки;
-     * 3) берём самого похожего пользователя (или первого из отсортированного списка);
-     * 4) берём фильмы, которые лайкнул похожий, но не лайкнул текущий;
-     * 5) грузим сущности Film, убирая дубли и null, сохраняя порядок.
+     * Рекомендации по simple-collaborative принципу:
+     *  - ищем похожего пользователя по пересечению лайков;
+     *  - берём фильмы, которые лайкнул похожий, но не лайкнул текущий;
+     *  - возвращаем список фильмов в порядке убывания «популярности» (закладывается в SQL репозитория).
      */
     public Collection<Film> getRecommendations(Long userId) {
         log.info("Generating recommendations for user {}", userId);
 
-        // 1) проверка существования пользователя (бросит NotFoundException, если нет)
+        // 0) убедимся, что пользователь существует (бросит NotFoundException при отсутствии)
         userService.findById(userId);
 
-        // 2) лайки текущего пользователя
-        Set<Long> userLiked = recommendationRepository.getUserLikedFilms(userId);
-        if (userLiked == null || userLiked.isEmpty()) {
-            log.info("User {} has no likes — empty recommendations.", userId);
-            return List.of();
+        // 1) пользователи с общими лайками (отсортированы по количеству общих лайков)
+        List<Long> similarUsers = recommendationRepository.findUsersWithCommonLikes(userId);
+        if (similarUsers == null || similarUsers.isEmpty()) {
+            log.info("No similar users found for user {}", userId);
+            return Collections.emptyList();
         }
 
-        // Вариант А: взять самого похожего по пересечению лайков
-        Long similarUserId = recommendationRepository.findUserWithMostCommonLikes(userId);
+        // 2) лайки текущего пользователя — если нет лайков, коллаборативные рекомендации бессмысленны
+        Set<Long> userLiked = recommendationRepository.getUserLikedFilms(userId);
+        if (userLiked == null || userLiked.isEmpty()) {
+            log.info("User {} has no likes — returning empty recommendations", userId);
+            return Collections.emptyList();
+        }
 
-        // Вариант Б (на случай, если метод выше вернул null): взять первого из отсортированного списка похожих
+        // 3) находим самого похожего пользователя
+        Long similarUserId = recommendationRepository.findUserWithMostCommonLikes(userId);
         if (similarUserId == null) {
-            List<Long> similarUsers = recommendationRepository.findUsersWithCommonLikes(userId);
-            if (similarUsers == null || similarUsers.isEmpty()) {
-                log.info("No similar users for {} — empty recommendations.", userId);
-                return List.of();
-            }
+            // fallback: первый из отсортированного списка
             similarUserId = similarUsers.get(0);
         }
 
-        // 4) id фильмов, которые лайкнул похожий пользователь и не лайкнул текущий
-        List<Long> ids = recommendationRepository.getRecommendedFilmIds(userId, similarUserId);
-        if (ids == null || ids.isEmpty()) {
+        // 4) фильмы, которые лайкнул похожий пользователь, но не лайкнул текущий (SQL уже сортирует по «популярности»)
+        List<Long> recommendedFilmIds = recommendationRepository.getRecommendedFilmIds(userId, similarUserId);
+        if (recommendedFilmIds == null || recommendedFilmIds.isEmpty()) {
             log.info("No recommended films for user {} (similar user {}).", userId, similarUserId);
-            return List.of();
+            return Collections.emptyList();
         }
 
-        // 5) загрузка фильмов + дедупликация с сохранением порядка
+        // 5) загружаем сущности фильмов, дедуплицируем с сохранением порядка
         Map<Long, Film> unique = new LinkedHashMap<>();
-        for (Long id : ids) {
+        for (Long id : recommendedFilmIds) {
             Film f = filmRepository.findById(id);
-            if (f != null) unique.putIfAbsent(f.getId(), f);
+            if (f != null) {
+                unique.putIfAbsent(f.getId(), f);
+            }
         }
 
         return new ArrayList<>(unique.values());
